# dashboard-for-claude-code

./: .gitignore  CHANGELOG.md  CLAUDE_README.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  security.yml
scripts/: README.md  SECURITY.md  com.claude-dashboard.plist.example  demo_data.py  deploy.env.example  deploy.sh  export.py  refresh.sh  session_digest.py  set_summaries.py
src/claude_dashboard/: __main__.py  app.py  parser.py  pricing.py  scanner.py  store.py
src/claude_dashboard/static/: app.js  index.html  styles.css
tests/: test_app.py  test_demo_data.py  test_export.py  test_main.py  test_parser.py  test_pricing.py  test_scanner.py  test_session_digest.py  test_set_summaries.py  test_store.py
tests/fixtures/: tiny_session.jsonl
